test/types/string/sungeun/c_string/substr.good
substr.chpl:5: error: halt reached - index out of bounds of string
